2007-01-09  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el: (tramp-process-one-action): Remove `with-timeout'.
	(tramp-process-actions): Add optional parameter TIMEOUT.
	(tramp-open-connection-telnet, tramp-open-connection-rsh)
	(tramp-open-connection-su): Add timeout of 60".

2006-12-31  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-completion-mode): Use `natnump' instead of
	`wholenump' because of XEmacs.

2006-12-31  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.0.55 repackaged.

2006-12-31  Romain Francoise <romain@orebokech.com>

	* tramp.el (tramp-default-method):  Don't use `symbol-function'.

2006-12-30  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.0.55 released.

2006-12-21  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-completion-mode): Use `wholenump' instead of
	`integerp'.  `char-equal' could fail else in case of negative
	numbers.  Reported by Toby Speight <T.M.Speight.90@cantab.net>.

2006-12-20  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-default-method): We still need to check for
	`executable-find', because it is not bound under Emacs 20.
	(tramp-handle-file-name-completion)
	(tramp-completion-handle-file-name-completion): PREDICATE must be
	applied on the expanded car's in `try-completion'.

2006-12-20  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-file-name-completion)
	(tramp-completion-handle-file-name-completion): Handle optional
	parameter PREDICATE.
	(tramp-find-default-method): Add code for default values.

2006-12-19  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-methods): Introduce new method `scpc'.  Remove
	"ControlMaster" option from the other `scp*' methods.
	(tramp-default-method): Check for ssh-agent before setting to
	`scp'.
	(top): Check for `font-lock-add-keywords' before calling; it
	doesn't exist under XEmacs.

2006-12-17  Michael Albinus  <michael.albinus@gmx.de>
